--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
   <h1>Check Console</h1>
-  <script src="app.js"></script>
+  <script src="Day1/app.js"></script>
+  <script src="Day2/app.js"></script>
 </body>
 </html>
