--- a/index.html
+++ b/index.html
@@ -1,57 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Age and Grade Checker</title>
-  <style>
-    body {
-      background-color: #1e1e1e;
-      color: white;
-      font-family: Arial, sans-serif;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding: 40px;
-    }
-    input, button {
-      padding: 10px;
-      margin: 10px;
-      border: none;
-      border-radius: 5px;
-      font-size: 16px;
-    }
-    input {
-      width: 200px;
-    }
-    button {
-      background-color: #4CAF50;
-      color: white;
-      cursor: pointer;
-    }
-    .output {
-      margin-top: 20px;
-      padding: 20px;
-      background-color: #333;
-      border-radius: 8px;
-      width: 300px;
-      text-align: center;
-    }
-  </style>
-</head>
-<body>
-
-  <h1>Age & Grade Evaluator</h1>
-  
-  <input type="number" id="ageInput" placeholder="Enter Age" />
-  <input type="number" id="gradeInput" placeholder="Enter Grade" />
-  <br>
-  <button onclick="evaluate()">Check Status</button>
-
-  <div class="output" id="resultBox">
-    <!-- Results will appear here -->
-  </div>
-
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <h2>my js</h2>
+    <p id="demo"></p>
+    <p id="name"></p>
+    <script>
+      document.getElementById("demo").innerHTML = "Shann";
+      document.getElementById("name").innerHTML = "Sadishan";
+    </script>
+  </body>
 </html>
